--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/02.png" alt="" /></a>
 											<div class="inner">
 												<h4>幸福</h4>
 												<p>幸福，是洁白的婚纱的在风中跳舞;幸福，是灿烂的笑容在脸上驻足;幸福，是执子之手与子偕老的道路;幸福，是今天一起迈向甜蜜的脚步。祝你新婚快乐!</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/122.jpeg" alt="" /></a>
 											<div class="inner">
 												<h4>白首齐眉鸳鸯比翼，青阳启瑞桃李同心。</h4>
 												<p>祝你们永结同心，百年好合!新婚愉快，甜甜蜜蜜!</p>
