--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#one" class="active">主题</a></li>
+						<li><a href="#two">事</a></li>
+						<li><a href="#three">一些分类</a></li>
+						<li><a href="#four">联系我</a></li>
 					</ul>
 				</nav>
 				<footer>
