--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-
+		　 <script LANGUAGE="javascript"> 
+			　 
+			　 function loopy(){ 
+			　　 var sWord =""; 
+			　　 while(sWord!="12345"){sWord=prompt("请输入你的登陆密码");} 
+			　　 alert("登陆成功！"); 
+			　 } 
+			　 loopy() 
+			　 //--> 
+			　 </script> 
 	</head>
 	<body class="is-preload">
 		<script type="text/javascript">
@@ -53,7 +62,7 @@
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/HUC-he" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
@@ -86,12 +95,12 @@
 									<h3>新婚快乐！</h3>
 									<p>看下面吧，我找不到句子了。。。。。</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-code">写些代码</li>
+										<li class="icon solid fa-cubes">谈论事</li>
+										<li class="icon solid fa-book">读一会书</li>
+										<li class="icon solid fa-coffee">来瓶咖啡</li>
+										<li class="icon solid fa-bolt">灯光亮起</li>
+										<li class="icon solid fa-users">永远在一起</li>
 									</ul>
 								</div>
 							</section>
@@ -126,7 +135,8 @@
 									</div>
 								</div>
 							</section>
-
+						<!--邮件发送系统-->
+							<h3><a href="Mailto:1962043824@qq.com">给我发邮件</a></h3> 
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
